# quetzal

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  conf.h  configure.ac
include/: quetzal.h.in
libquetzal/: Makefile.am  points.c
